Worked Examples for ODSC Workshop

--- a/examples/classification_diabetes.Rmd
+++ b/examples/classification_diabetes.Rmd
@@ -67,7 +67,13 @@ h2o.removeAll()   # Optional: remove anything from previous session
 
 ```{r}
 # H2O dataframe
+# Note: use as.h2o(...) for small data frame only
+# For real use cases, use h2o.importFile(...) 
 h_diabetes = as.h2o(PimaIndiansDiabetes)
+```
+
+```{r}
+# Check first six samples
 head(PimaIndiansDiabetes)
 ```
 
@@ -119,12 +125,14 @@ h2o.performance(model_gbm, newdata = h_test)
 model_automl = h2o.automl(x = features,
                           y = target,
                           training_frame = h_train,
-                          nfolds = 5,               # Cross-Validation
-                          max_runtime_secs = 120,   # Max time
-                          max_models = 100,         # Max no. of models
-                          stopping_metric = "AUC", # Metric to optimize
-                          project_name = "automl_class",
-                          exclude_algos = NULL,     # If you want to exclude any algo 
+                          balance_classes = TRUE,  
+                          nfolds = 5,              # Cross-Validation
+                          max_runtime_secs = 300,  # Max time
+                          # max_models = 100,      # or Max no. of models
+                          stopping_metric = "logloss", # Metric to optimize
+                          stopping_rounds = 5,     # control early stopping
+                          project_name = "automl_class", # useful if you want to add more models in future
+                          exclude_algos = NULL,    # If you want to exclude any algo 
                           seed = n_seed)
 ```
 
@@ -152,12 +160,12 @@ model_automl@leader
 
 ```{r}
 # Default GBM Model
-h2o.auc(h2o.performance(model_gbm, newdata = h_test))
+h2o.logloss(h2o.performance(model_gbm, newdata = h_test))
 ```
 
 ```{r}
 # Best model from AutoML
-h2o.auc(h2o.performance(model_automl@leader, newdata = h_test)) # higher AUC = better
+h2o.logloss(h2o.performance(model_automl@leader, newdata = h_test)) # lower logloss = better
 ```
 
 <br>
@@ -202,23 +210,24 @@ explainer = lime::lime(x = as.data.frame(h_train[, features]),
 ## Step 2: Turn `explainer` into `explanations`
 
 ```{r}
-# Extract one sample (change `2` to any row you want)
-d_samp = as.data.frame(h_test[2, features])
+# Extract one sample (change `1` to any row you want)
+d_samp = as.data.frame(h_test[1, features])
 ```
 
 ```{r}
 # Assign a specifc row name (for better visualization)
-row.names(d_samp) = "Sample 2" 
+row.names(d_samp) = "Sample 1" 
 ```
 
 ```{r}
 # Create explanations
+set.seed(n_seed)
 explanations = lime::explain(x = d_samp,
                              explainer = explainer,
                              n_permutations = 5000,
                              feature_select = "auto",
                              n_labels = 1,    # Binary classification
-                             n_features = 13) # Look top x features
+                             n_features = 8) # Look top n features
 ```
 
 <br>
