--- a/examples/regression_boston.Rmd
+++ b/examples/regression_boston.Rmd
@@ -67,7 +67,13 @@ h2o.removeAll()   # Optional: remove anything from previous session
 
 ```{r}
 # H2O dataframe
+# Note: use as.h2o(...) for small data frame only
+# For real use cases, use h2o.importFile(...) 
 h_boston = as.h2o(BostonHousing)
+```
+
+```{r}
+# Check out first six samples
 head(BostonHousing)
 ```
 
@@ -120,10 +126,11 @@ model_automl = h2o.automl(x = features,
                           y = target,
                           training_frame = h_train,
                           nfolds = 5,               # Cross-Validation
-                          max_runtime_secs = 120,   # Max time
-                          max_models = 100,         # Max no. of models
+                          max_runtime_secs = 300,   # Max time in sec
+                          # max_models = 100,       # or Max no. of models
                           stopping_metric = "RMSE", # Metric to optimize
-                          project_name = "automl_reg",
+                          stopping_rounds = 5,      # control early stopping
+                          project_name = "automl_reg", # use if you want to add more models in the future
                           exclude_algos = NULL,     # If you want to exclude any algo 
                           seed = n_seed)
 ```
@@ -213,11 +220,12 @@ row.names(d_samp) = "Sample 1"
 
 ```{r}
 # Create explanations
+set.seed(n_seed)
 explanations = lime::explain(x = d_samp,
                               explainer = explainer,
                               n_permutations = 5000,
                               feature_select = "auto",
-                              n_features = 13) # Look top x features
+                              n_features = 13) # Look top n features
 ```
 
 <br>
